fix: Restore sidebar slide-in effect on mobile

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -155,17 +155,15 @@ body {
 }
 
 .sidebar {
-    visibility: hidden;
     position: fixed;
-    left: 0;
     right: -430px;
     top: 0;
     bottom: 0;
+    box-shadow: 0 0 30px rgb(0 0 0 / 30%);
     transition: right 0.2s ease-in;
 }
 
 .menu-open .sidebar {
-    visibility: visible;
     right: 0;
 }
 
@@ -189,9 +187,6 @@ body {
     }
 
     .sidebar {
-        visibility: visible;
-        box-shadow: 0 0 30px rgb(0 0 0 / 30%);
-        left: unset;
         max-width: 400px;
     }
 
